--- a/Files/Introduction.tex
+++ b/Files/Introduction.tex
@@ -63,8 +63,6 @@ By the 1940’s supersonic wind tunnels were in use. In 1972 a cryogenic wind tu
 %\paragraph{}Wind tunnels are used to measure the aerodynamic forces on airplanes, wings, cars, trucks, bridges, and buildings, they can also be used to measure the
 %aerodynamic forces on sports balls, partially open valves, and anything else that can be mounted on the mounting sting. Wind tunnels are an effective tool used by engineers in determining the various aerodynamic loads due to movement of these vessels during the development process.
 %For wind tunnel testing with scale models to be applicable to the aerodynamics of the full-scale test object, conditions of dynamic similarity must be met.
-\paragraph{}Wind tunnel testing is not cheap i.e. both to build and to use. While a crude wind tunnel can be constructed relatively cheaply from a large fan and
-sheet metal, our project will be limited to development of the six-degrees-of-freedom Stewart Platform and Force balance. We will use the low speed wind tunnel that is currently available at the fluids laboratory.
 \subsubsection{Force Balance and Load Sensors}
 \paragraph{}A force balance is a device used to take direct measurement of forces and torques acting on the model that is being tested in the wind tunnel. The need for force balances arises due to the necessity of having maximum load capability in all measuring components along with the accuracy for measuring minimum loads. 
 \cite{fernandes_design_nodate}
@@ -100,6 +98,4 @@ sheet metal, our project will be limited to development of the six-degrees-of-fr
 \item To obtain forces and moments from a test model
 \end{enumerate}
 \subsection{Justification of the study}
-\paragraph{}Additive manufacturing offers the ability to produce intricate products and parts with lower development costs, shorter lead times, less energy consumed during manufacturing as well as less material waste. This method can be used to manufacture delicate components such as the bipolar plates with elimination of the risks involved such as breakage of brittle Graphene material during production.     
-\paragraph{}Precise control of reactant flow and pressure, stack temperature, and membrane humidity will increase the fuel cell’s robustness as well as efficiency.
-\paragraph{}The goal of this research is to develop physic-based dynamic models of fuel cell systems and fuel processor systems and then apply multivariable control techniques to study their behavior. The analysis will give insight into the control design limitations and provide guidelines for the necessary controller structure and system re-design.
+\paragraph{}Wind tunnel testing is not cheap i.e. both to build and to use. While a crude wind tunnel can be constructed relatively cheaply from a large fan and sheet metal, our project will be limited to the development of a six-degrees-of-freedom Stewart Platform and three-component Force balance. We will use the low speed wind tunnel that is currently available at the fluids laboratory.
