--- a/Final Report/Files/Chapter3.tex
+++ b/Final Report/Files/Chapter3.tex
@@ -1,301 +1,20 @@
 \section{Methodology}
 \subsection{Outline}
-This section will look into analysis of the six DOF Stewart platform, considerations for the force sensor and the velocity measurement within the wind tunnel. It will finally look into the design of a human machine interface that will be used to control the Stewart platform, obtain measurements and display results.
-
-\subsection{Mechanical Design}
-Since a Stewart platform has already been designed and fabricated, this section will look at: design considerations and analysis and evaluation of the Stewart platform to verify whether it will be feasible to work with.
-\subsubsection{Design Considerations for the Stewart Platform}
-\begin{enumerate}
-\item When the controllable axes are active, the platform must be controlled in six degrees of motion.
-\item When the controllable members are stationary, the
-platform must have a corresponding fixed position.
-\item The design parameters for consideration are: mobile platform radius, height of the platform and angle between adjacent joints of mobile platform and base plate.
-\item The mechanism should be lightweight.
-\item Velocity and position control of the mechanism should be easy to achieve.
-\end{enumerate}
-%\subsection{Kinematic Analysis - Rotational matrix}
-%Euler angles are utilized to obtain rotational matrix for the moving platform of the Stewart platform mechanism. The rotational matrix is represented as follows \cite{csumnu2017simulation}:
-%\begin{ceqn}
-% R_{P}^B = R_{Z}(\gamma)*R_{Y}(\beta)*R_{X}(\alpha)
-%\end{ceqn}
-%Where $\gamma, \beta, \alpha$ - angles of rotation about the z-, y- and x-axis respectively.
-
-%In matrix form:
-%\[ R_{P}^B =
-% \begin{bmatrix}
-% c\beta c\gamma & s\alpha s\beta c\gamma - c\alpha s\gamma & c\alpha s\beta c\gamma + s\alpha s\gamma\\
-% c\beta s\gamma & s\alpha s\beta s\gamma + c\alpha c\gamma & c\alpha s\beta s\gamma - s\alpha c\gamma\\
-% -s\beta & s\alpha c\beta & c\alpha c\beta  
-% \end{bmatrix}
-%\]
-%Generalized coordinate position and velocity vector of the moving platform is represented below \cite{csumnu2017simulation}:
-%\[
-%q=
-%\begin{bmatrix}
-%tx & ty & tz & \alpha & \beta & \gamma
-%\end{bmatrix}^\top
-%\]
-%\[
-%\dot{q}=
-%\begin{bmatrix}
-%\dot{tx} & \dot{ty} & \dot{tz} & \dot{\alpha} & \dot{\beta} & \dot{\gamma}
-%\end{bmatrix}^\top
-%\]
-%Transformation of angular velocity of moving platform to the base frame can be done using Euler angles \cite{csumnu2017simulation}:
-%\[
-%\omega =
-%\begin{bmatrix}
-%1 & 0 & s\beta \\
-%0 & c\alpha & -s\alpha c\beta \\
-%0 & s\alpha & c\alpha c\beta 
-%\end{bmatrix}
-%\begin{bmatrix}
-%\dot{\alpha} \\
-%\dot{\beta}\\
-%\dot{\gamma}
-%\end{bmatrix}
-%\]
-%Acceleration of the moving platform is obtained by differentiating the velocity of the moving platform with respect to time:
-%\[
-%\dot{\omega} =
-%\begin{bmatrix}
-%1 & 0 & s\beta \\
-%0 & c\alpha & -s\alpha c\beta \\
-%0 & s\alpha & c\alpha c\alpha c\beta 
-%\end{bmatrix}
-%\begin{bmatrix}
-%\ddot{\alpha} \\
-%\ddot{\beta}\\
-%\ddot{\gamma}
-%\end{bmatrix}
-%+
-%\begin{bmatrix}
-%0 & 0 & \dot{\beta}c\beta \\
-%0 & \dot{\alpha} s\alpha & -\dot{\alpha} c\alpha c\beta + s\alpha \dot{\beta} s\beta \\
-%0 & \dot{\alpha}c\alpha & -\dot{\alpha}s\alpha c\beta - c\alpha \dot{\beta}s\beta
-%\end{bmatrix}
-%\begin{bmatrix}
-%\dot{\alpha} \\
-%\dot{\beta}\\
-%\dot{\gamma}
-%\end{bmatrix}
-%\]
-%\subsection{Inverse Kinematic Analysis}
-%Inverse kinematic analysis is used to determine the length of the legs according to planned trajectories of the moving platform position. In order to consider the length of the leg of a Stewart platform, closed-loop of one leg is used as shown in figure 3.1. Using this closed-form representation, the leg
-%vector with respect to base platform can be obtained as follows \cite{csumnu2017simulation}:
-%\begin{ceqn}
-%\label{eqn}
-%L_{i} = q_{i}^{B} - b_{i}
-%\end{ceqn}
-%The position vector of ith upper junction point with respect to the base frame is given by the following;
-%\begin{ceqn}
-%\label{eqn}
-%q_{i}^{B} = t + R_{p}^{B} * q_{i}^{p}
-%\end{ceqn}
-%\begin{center}
-%	\begin{figure}[!h]
-%	\centering
-%	\includegraphics[width=0.6\linewidth]{Figures/Fig12}
-%	\caption[Closed-loop representation]{Closed-loop representation of one leg of the Stewart Platform \cite{csumnu2017simulation}}
-%	\end{figure}
-%\end{center}
-%Then the length of the ith leg can be acquired as follows:
-%\newpage
-%\begin{multline}
-%\label{eqn}
-%l_{i}^2 = (a_{x} * r_{p} * c_{i} + b_{x}*r_{p}*s_{i}
-%+ t_{x}-r_{b}*c_{i})^2 + \\(a_{y}*r_{p}*c_{i} + b_{y}*r_{p}*s_{i} + t_{y}-r_{b}*s_{i})^2+ (a_{z}*r_{p}*c_{i}+b_{z}*r_{p}*s_{i}+t_{z})^2
-%\end{multline}
-%\subsection{Inverse Velocity Analysis}
-%Inverse Jacobian matrix can be used to perform inverse velocity analysis of the Stewart
-%platform. Inverse Jacobian matrix describes relation between velocity of the moving platform and the leg velocity.
-
-%Inverse Jacobian matrix for a 6-DOF Stewart Platform
-%\cite{csumnu2017simulation}:
-%\[ J^-1 =
-%\begin{bmatrix}
-%u_{1}^{T} & (R_{P}^{B}q_{1}^{B} * u_{1})^T\\
-%u_{2}^{T} & (R_{P}^{B}q_{2}^{B} * u_{2})^T\\
-%u_{3}^{T} & (R_{P}^{B}q_{3}^{B} * u_{3})^T\\
-%u_{4}^{T} & (R_{P}^{B}q_{4}^{B} * u_{4})^T\\
-%u_{5}^{T} & (R_{P}^{B}q_{5}^{B} * u_{5})^T\\
-%u_{6}^{T} & (R_{P}^{B}q_{6}^{B} * u_{6})^T
-%\end{bmatrix}
-%\]
-\subsubsection{Base and Moving Platform}
- The Stewart platform should be stable. Thus the base should have a larger diameter than that of the moving platform. The Center of Gravity (COG) shouldn't fall outside the base during any of the platform movements.
-
-
-\subsubsection{Quality Index $(\lambda)$ of Stewart Platform Design}
-Quality index $(\lambda)$ varies from 0 to 1.\\
-Where,\\
-0 - design with singularities and\\
-1 - Optimal design in which the determinant of the correspondent Jacobian matrix is maximum.
-
-\textbf{Singularities} - uncontrollable states.
-
-Derivation of the formula to compute the quality index has been done and is presented in the literature review.
-
-Taking the Stewart Platform base diameter of 300mm, platform diameter of 200mm and height of 190mm i.e.: 
-
-a = 200mm, b = 300mm, h = 190mm , $\alpha = 0.25$, $ \beta = 0.1667$,
-\begin{ceqn}
-\begin{align}
-	|J| =
-	\frac{81 \sqrt{3} a^3 b^3 h^3 (3 \alpha \beta - 2 \alpha - 2 \beta +1)^3}{4(a^2(3 \alpha^2 - 3 \alpha + 1)+ ab(\alpha \beta - 1 )+ b^2(3 \beta^2 - 3 \beta + 1)+ 3h^2)^3} = 2.437 \times 10^{-3}
-	\label{eq:myeqn}
-\end{align}
-\end{ceqn}
-And $ |J|_{m}$ where,
-\begin{ceqn}
-\begin{align}
-	h = \sqrt{\frac{1}{3}(a^2 (3 \alpha^2 - 3 \alpha + 1)+ ab (3\alpha\beta - 1)+b^2(3 \beta^2 - 3 \beta + 1))} = 0.0764
-	\label{eq:myeqn}
-\end{align}
-\end{ceqn}
-\begin{equation*}
-|J|_{m} =
-\frac{81 \sqrt{3} a^3 b^3 h^3 (3 \alpha \beta - 2 \alpha - 2 \beta +1)^3}{4(a^2(3 \alpha^2 - 3 \alpha + 1)+ ab(\alpha \beta - 1 )+ b^2(3 \beta^2 - 3 \beta + 1)+ 3h^2)^3} = 2.834 \times 10^{-3}
-\label{eq:myeqn}
-\end{equation*}
-Quality index for this Stewart Platform design is therefore, 
-
-$$\lambda = \frac{|J|}{|J|_{m}} = 0.86$$
-%\label{eq:myeqn}
-%A quality index of 0.86 presents a design of high quality and mechanical feasibility.
-\subsubsection{Sheet Metal Thickness and Material}
-Metal used to manufacture the base should be of significant thickness to provide more support to the whole structure.
-
-Metal used to manufacture the moving platform should be lightweight and of enough thickness to enable it to withstand significant loads.
-
-Some sheet metal materials are considered and compared in table \ref{table1}.
-
-\begin{center}
-\begin{table}[!h]
-	\caption[Sheet Metal Properties]{Material Properties}
-	\label{table1}
-\centering
-\begin{tabular}{|l|l|l|}
-\hline
-\textbf{Metal} & \textbf{Density$(gcm^{-3})$} & \textbf{Yield Strength(MPa)}\\
-\hline
-Aluminium (6061-T6)& 2.7 & 270\\
-\hline
-Mild Steel & 7.85 & 250\\
-\hline
-Stainless Steel & 7.5 - 8.0 & 215\\
-\hline
-\end{tabular}
-\end{table}
-\end{center}
-Aluminium 6061 is preferable for the moving platform since it is lightweight and can withstand significant loads without yielding. It also has good machinability (50 per cent). A sheet metal of 1.5mm thickness is used for the platform.
-\begin{center}
-	\begin{figure}[H]
-	\centering
-	\includegraphics[width=0.6\linewidth]{Figures/Flat}
-	\caption[Moving Platform]{Moving Platform (Flat Pattern)}
-	\end{figure}
-\end{center}
-
-The moving platform has flanges to provide linking points of the Stewart Platform legs. A flange of 30mm is considered allows ample space for the spherical joint (whose connecting side diameter is 10mm) to fit and to be well centred.
-\begin{center}
-	\begin{figure}[H]
-	\centering
-	\includegraphics[width=0.6\linewidth]{Figures/Folded}
-	\caption[Moving Platform]{Moving Platform (Folded)}
-	\end{figure}
-\end{center}
-
-Both stainless steel and mild steel would make a suitable base for the Stewart platform due to their weight. They are also easy to machine (machinability for Mild steel - 78 per cent, for stainless steel: 45 - 110 per cent). Mild steel is readily available in the Kenyan market. Stainless steel is a bit more expensive. A comparison of these metal weights and machinability properties is shown in table \ref{table2}.
-\begin{center}
-\begin{table}[!h]
-	\caption[Metal weight Properties]{Material weight properties}
-	\label{table2}
-\centering
-\begin{tabular}{|l|l|l|}
-\hline
-\textbf{Metal} & \textbf{Density$(gcm^{-3})$} & \textbf{Machinability(percent)}\\
-\hline
-Aluminium (6061-T6)& 2.7 & 275\\
-\hline
-Mild Steel & 7.85 & 78\\
-\hline
-Stainless Steel & 7.5 - 8.0 & 45-110\\
-\hline
-\end{tabular}
-\end{table}
-\end{center}
-
-Due to cost constraints and for the Stewart platform's overall weight (and without compromising on the platform stability), aluminium can be used to manufacture the base. A thickness of 2.5mm for the base is used.
-\begin{center}
-	\begin{figure}[H]
-	\centering
-	\includegraphics[width=0.6\linewidth]{Figures/Base}
-	\caption[Base Plates]{Base Plates}
-	\end{figure}
-\end{center}
-Aluminium, unlike mild steel, would not require post-processing methods (e.g. powder coating) which would add on the cost.
-\subsubsection{Sensing Bars/Rods}
-Two options can be considered:
+This section will look into:
 \begin{itemize}
-\item Bars with square cross-section
-\item Cylindrical bars
+	\item The instrumentation of the Stewart platform legs in order to come up with a force balance.
+	\item Electromechanical modifications to improve the platform functionality.
+	\item The inverse kinamatics used to come up with servo angles for Stewart platform control.
+	\item The printed circuit board.
+	\item The development of a Human-machine
+	 Interface for measurement readings and control of the Stewart platform load balance.
+	\item Pitot tubes setup in the wind tunnel and pitot tube programming.
+	\item The integeration of a smoke visualization system into the wind tunnel.
+	\item Comutational Fluid Dynamics to determine the effects of the strut to the flow and to obtained 
+		force values.
 \end{itemize}
-Cylindrical bars are preferable due to their ease of coupling with the available spherical joints. Cylindrical bars also guarantee uniform deformation of the bars - both in the axial and cross-sectional directions.
 
-From inquiries around suppliers in the Kenyan Market, these bars are usually available in steel and aluminium. In order to select the optimum solution for this application, the Yield Strength, modulus of rigidity, Young's Modulus and density of both materials are compared. The different values are shown in table \ref{tabmat}. 
-\begin{table}[!h]
-\caption[Aluminium and Steel Properties]{Material Properties of Aluminium and Steel}
-\label{tabmat}
-
-\begin{tabular}{|l|l|l|l|l|}
-\hline
-\textbf{Material} & \textbf{Yield Strength (MPa)} & \textbf{G (GPa)} & \textbf{E (GPa)} & \textbf{Density ($g/cm^3$)}\\
-\hline
-Steel & 240 & 79 & 190 - 215 & 7.8\\
-\hline
-Aluminium & 270 & 26 & 69 - 70 & 2.7\\
-\hline
-\end{tabular}
-\end{table}
-
-E - Young's Modulus\\
-G - Modulus of Rigidity
-
-From $ \sigma = E \epsilon $, where $\sigma$ - Stress , E - Young's Modulus and $ \epsilon$ - Strain, materials with high values of Young Modulus will give smaller values of strain when subjected to a deforming force. Thus, aluminium rods will experience higher strains than steel rods.
-
-Materials with high modulus of rigidity will require huge amounts of force to deform. Aluminium rods will experience deformation under small amounts of force as compared to steel rods.
-
-Aluminium rods have the capability of bearing higher loads before their deformation goes from elastic to plastic as compared to steel rods. Aluminium rods also have the benefit of being lightweight.
-
-%\section{Sensing Rods Design - Length}
-%From the previously selected dimensions i.e diameter of platform, diameter of base and distance between the base and platform, the length of each rod can be determined by geometry.
-
-%Rod length = 140mm
-%\begin{center}
-%	\begin{figure}[!h]
-%	\centering
-%	\includegraphics[width=0.6\linewidth]{Figures/Ideation}
-%	\caption[Ideation]{Ideation technique to obtain rod length}
-%	\end{figure}
-%\end{center}
-
-\subsubsection{Sensing Rods Design - Shape}
-Two options can be considered:
-\begin{itemize}
-\item Solid cylindrical rods
-\item Hollow Cylindrical rods
-\end{itemize}
-From local suppliers, 10mm aluminium rods are available and economical. The rods are not hollow. From $\sigma = \frac{F}{A}$, where $\sigma$ - Stress, F - Axial Force on the leg and, A - Cross-sectional area, for the same amount of axial load, the hollow rod will experience more stress and consequently larger strains as compared to the solid rod. The rods are threaded at the ends for coupling with the spherical joints.
-
-If solid rods are used, strain gauges of high sensitivity should be used.
-\begin{center}
-	\begin{figure}[H]
-	\centering
-	\includegraphics[width=0.8\linewidth]{Figures/Rod}
-	\caption[Aluminium rod]{Aluminium rod}
-	\end{figure}
-\end{center}
+\subsection{Instrumentation of the Stewart Platform}
 
 \subsubsection{Test Flange and Strut}
 The test flange will be used to hold the strut during wind tunnel testing. For optimum results, the reference axis is taken to be in the middle of the middle platform \cite {fernandes_design_nodate}. The flange will be fastened to the moving platform by use of bolts and nuts. Fasteners are more economical and easy to achieve as compared to welding. M6 or M8 nuts can be used for this purpose.
@@ -317,56 +36,6 @@ The strut will go into the test section of the Wind tunnel at the Fluids lab in 
 	\end{figure}
 \end{center}
 
-\subsubsection{Spherical Joints}
-For the 6-6 type, both platforms have six vertices and
-the connections between the sensing bars and the platforms is made by simple spherical joints. Single spherical joints are preferable because they are easy to manufacture and they eliminate the issues of interference between sensing bars when double spherical joints are used \cite{fernandes_design_nodate}.  
-
-Connection with spherical joints also prevents the torsion and bending phenomena in the bars when subjected to axial forces \cite{fernandes_design_nodate}.
-
-Spherical joints can be obtained from online stores. One such store is RS Components Africa. Options of spherical joints to choose from include:
-\begin{itemize}
-\item Ball and socket joint M5
-\item Ball and socket joint M6
-\item Ball and socket joint M8
-\item Ball and socket joint M10
-\end{itemize}
-Based on the diameter of the available aluminium rods, Ball and socket joint M10 is used.
-\begin{center}
-	\begin{figure}[H]
-	\centering
-	\includegraphics[width=0.6\linewidth]{Figures/Spherical}
-	\caption[Spherical Joint]{Spherical Joint available from RS Components Africa \cite{datasheet_spherical}}
-	\end{figure}
-\end{center}
-The following dimensions are provided by the manufacturer:
-\begin{center}
-	\begin{figure}[H]
-	\centering
-	\includegraphics[width=0.8\linewidth]{Figures/Spherical Dimensions}
-	\caption[Spherical Joint Dimensions]{Spherical Joint Dimensions \cite{datasheet_spherical}}
-	\end{figure}
-\end{center}
-\begin{table}[H]
-\caption{Spherical Joint Dimensions}
-\end{table}
-\begin{tabular}{|l|l|l|l|l|l|l|l|l|l|l|l|}
-\hline
-\textbf{Size(mm)}& \textbf{D1}& \textbf{D2}&\textbf{ D4}& \textbf{L1}& \textbf{L2}& \textbf{L3}& \textbf{L4}& \textbf{L5}& \textbf{R} & \textbf{A/F} & \textbf{min pull-off Force(N)}\\
-\hline
-10 & 16 & M10 & 16 & 47 & 35 & 15.5 & 47.5& 20 & 12 & 13 & 80\\
-\hline
-\end{tabular}
-
-\paragraph{}
-
-The Spherical joint was done on Autodesk Inventor and included in the Stewart Platform Assembly.
-\begin{center}
-	\begin{figure}[H]
-	\centering
-	\includegraphics[width=0.5\linewidth]{Figures/Spherical CAD}
-	\caption[Spherical Joint CAD]{Spherical Joint as designed on Autodesk Inventor}
-	\end{figure}
-\end{center}
 \subsubsection{Finite Element Analysis}
 A Finite Element Analysis was done on the Stewart platform design to determine its performance under given loads. The platform is going to be subjected to a force during wind tunnel testing. A maximum load of 50N is selected for the Finite Element Analysis. This could be more or less since models vary in size. The z-component of the force is considered. 
 The mesh generated is shown in the figure \ref{fig:feamesh}.
@@ -549,15 +218,6 @@ Two methods of actuation are popular with Stewart platforms:
 \item Use of motors
 \end{itemize}
 Whereas linear actuators are relatively easy to control, they are very expensive. Thus the choice of motors.
-%\subsection{Servo Horn}
-%This will provide the connection between the motor and the spherical joints hence the aluminium rods. An 8mm hole on one end for mounting the spherical joint and another hole 8.5mm that will allow coupling with the servo arm bush of 8.6mm. The 1mm gap ensure tight fitting.
-%\begin{center}
-%	\begin{figure}[!h]
-%	\centering
-%	\includegraphics[width=0.6\linewidth]{Figures/Horn}
-%	\caption{Servo horn}
-%	\end{figure}
-%\end{center}
 
 \subsubsection{Motor Selection}
 One parameter was considered in our motor selection i.e. torque required. From the Autodesk Inventor design environment, the mass of the moving platform and mechanical couplings was 2.6kg. Each motor is supposed to move a minimum mass of 0.177kg. Using a servo horn of distance 45mm centre-to-centre, and Distance = $ \pi $ D, then:
